--- a/nix/app/internal/views/layouts/base.templ
+++ b/nix/app/internal/views/layouts/base.templ
@@ -25,8 +25,7 @@ templ Base(title string) {
 			{ children... }
 			<footer class="text-center p-8 text-base-content/60 text-sm">
 				<p>
-					Card images from <a href="https://mtgtreachery.net" target="_blank" class="link link-primary">MTG Treachery</a> | 
-					<a href="/static/attribution.html" class="link link-primary">Attribution &amp; Legal</a>
+					Card images from <a href="https://mtgtreachery.net" target="_blank" class="link link-primary">MTG Treachery</a>
 				</p>
 			</footer>
 		</body>
